# seds9

./: README.md  pyproject.toml
src/seds9/: __init__.py  __main__.py  core.py
